---------------------------
  Contributors
---------------------------

Dmitry Baikov
Steven Chamberlain
Thom Johansen
Thibault LeMeur
Pieter Palmers
Tom Szilagyi
Andrzej Szombierski 
Kjetil S.Matheussen
Pieter Palmers
Tim Blechmann
Marc-Olivier Barre
Nedko Arnaudov
Fernando Lopez-Lezcano

---------------------------
  Jackdmp changes log
---------------------------

2008-03-26 Stephane Letz  <letz@grame.fr>
		
	* JackWrapperAPI.cpp: use open_library in jack_client_name_size, jack_port_name_size and jack_port_type_size.

2008-03-20 Stephane Letz  <letz@grame.fr>
		
	* Transport timebase fix.

2008-03-19 Stephane Letz  <letz@grame.fr>
		
	* Synchronise transport.h with latest jackd version (Video handling).

2008-03-17 Stephane Letz  <letz@grame.fr>
		
	* New jack_server_control client to test notifications when linked to the server library.
	* Correct JackClient::Activate so that first kGraphOrderCallback can be received by the client notification thread.
	* MIDI API in wrapper lib.
	* Fix connect notification to deliver *one* notification only.

2008-03-16 Stephane Letz  <letz@grame.fr>
		
	* Use engine in JackAlsaDriver::port_register and JackAlsaDriver::port_unregister.
	* New JackLockedEngine decorator class to serialize access from ALSA Midi thread, command thread and in-server clients.

2008-03-15 Stephane Letz  <letz@grame.fr>
		
	* Add -L (extra output latency in aynchronous mode) in CoreAudio driver.
	* RT scheduling for OSX thread (when use in dummy driver).

2008-03-14 Stephane Letz  <letz@grame.fr>
		
	* Fernando Lopez-Lezcano scons patch.

2008-03-13 Stephane Letz  <letz@grame.fr>
		
	* Add test for jack_cycle_wait, jack_cycle_wait and jack_set_process_thread API.
	* Add jack_set_process_thread in wrapper library.
	* Correct all backend playback port latency in case of "asynchronous" mode (1 buffer more).
	* Correct jack_port_get_total_latency.
	* Correct jack_port_by_id in wrapper library.

2008-03-12 Stephane Letz  <letz@grame.fr>
		